# spark

./: Cargo.toml  flake.nix  license  readme.md
.github/workflows/: ci.yml  code-quality.yml
backend/: Cargo.toml
backend/clorinde/src/queries/: users.rs
backend/src/: api_types.rs  main.rs
backend/src/models/: user.rs
backend/src/routes/: mod.rs  user_routes.rs
database/queries/: users.sql
nix/: scripts.nix
src/: main.rs
src/models/: user.rs
src/routes/: mod.rs  user_routes.rs
