[package]
name = "SPARK-stack"
version = "0.0.1"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["http2", "macros"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.228", features = ["derive"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
