[package]
name = "SPARK-stack"
version = "0.0.1"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["http2", "macros"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
#sqlx = { default-features = false, version = "0.8", features = ["postgres", "macros", "runtime-tokio-rustls"] }
clorinde = { path = "clorinde" }

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }